# Terrasaur

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  mkPackage.bash  pom.xml
doc/: conf.py  index.rst  make_doc.bash
doc/_static/: style.css
doc/tools/: CompareOBJ.rst  CreateSBMTStructure.rst  DumpConfig.rst  RenderShapeFromSumFile.rst  ShapeFormatConverter.rst
doc/tools/support_files/: M605862153F5.SUM  xyzrandom.txt
src/main/bash/: createVersionFile.bash
src/main/java/terrasaur/apps/: AdjustShapeModelToOtherShapeModel.java  AppendOBJ.java  BatchSubmit.java  CKFromSumFile.java  ColorSpots.java  CompareOBJ.java  CreateSBMTStructure.java  DSK2OBJ.java  DifferentialVolumeEstimator.java  DumpConfig.java  GetSpots.java  Maplet2FITS.java  (+17 more)
src/test/resources/lidar/: transformationfile.txt
support-libraries/: .gitignore  README.md  buildAll.bash  mkPackage.bash
support-libraries/altwg/: CMakeLists.txt  install-altwg.sh
support-libraries/altwg/common/: mathutil.h  util.h
support-libraries/altwg/gravity/: README-gravity.txt  gravity-werner.cpp  gravity.cpp  platemodel.cpp
support-libraries/altwg/strip-adjustment/: closest-point-vtk.cpp  closest-point-vtk.h  gradient.ginsh  icp-gsl.cpp  icp-gsl.h  lidar-optimize.cpp  lidardata.cpp  lidardata.h  optimize-gsl.cpp  optimizer.cpp  optimizer.h
support-libraries/opencv/: install-opencv.sh
support-libraries/spice/: install-spice.sh
support-libraries/util/createInfoFiles/: computePointing.hpp  createInfoFiles.cpp  getFov.cpp  getTargetState.cpp  install-createInfoFiles.sh
support-libraries/vtk/: install-vtk.sh
(+184 files in other folders)
